--- a/css/resume.css
+++ b/css/resume.css
@@ -176,15 +176,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5 !important;
+  background-color: royalblue !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: royalblue !important;
 }
 
 a {
-  color: #BD5D38;
+  color: royalblue;
 }
 
 a:hover, a:focus, a:active {
